<resources>
    <string name="app_name">魔塔</string>

    <!-- 主菜单 -->
    <string name="new_game">新的游戏</string>
    <string name="main_menu">主菜单</string>
    <string name="read_record">读取存档</string>
    <string name="save_record">保存存档</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="back_game">返回游戏</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="back">返回</string>
    <string name="leave_shop">离开商店</string>

    <string name="rename">重命名</string>
    <string name="delete">删除</string>
    <string name="input_name">请输入新的名称</string>

    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="read_fail">读取失败</string>

    <string name="new_game_tip">新游戏将会覆盖自动存档，确定吗？</string>
    <string name="delete_fail">删除存档失败</string>
    <string name="auto_save">自动存档</string>
    <string name="record_name">记录%1$d</string>
    <string name="new_record">新建存档</string>
    <string name="new_record_history">没有历史存档</string>
    <string name="loading">正在加载…</string>

    <string name="continue_game">继续</string>
    <string name="finish_game">结束</string>

    <string name="level">等级</string>
    <string name="hp">生命</string>
    <string name="damage">攻击</string>
    <string name="defense">防御</string>
    <string name="money">金钱</string>
    <string name="exp">经验</string>
    <string name="hp_lost">损失</string>

    <string name="map">地图</string>
    <string name="floor">第%1$d层</string>

    <string name="end_dialogue">结束对话</string>

    <string name="fight_fail">打不过</string>
    <string name="fight_win">战斗胜利</string>
    <string name="fight_get">获得%1$d金钱，%2$d经验</string>

    <string name="screen_light">屏幕亮度</string>
    <string name="game_volume">游戏音量</string>
    <string name="background_music">背景音乐</string>
    <string name="game_sound">游戏音效</string>
    <string name="auto_find_way">自动寻路</string>
    <string name="screen_orientation">屏幕方向</string>

    <string name="orientation_land">横屏</string>
    <string name="orientation_port">竖屏</string>
    <string name="orientation_auto">自动</string>

    <string name="shop_shortcut">商店快捷</string>
    <string name="open_all_function">功能全开</string>
    <string name="map_invisible">无视地图</string>
    <string name="show_fight_dialog">显示打斗</string>
    <string name="invincible">无敌</string>

    <string name="enemy_property_help">怪物图鉴</string>
    <string name="enemy_name">怪物名</string>
    <string name="enemy_empty">没有怪物了</string>

    <string name="fly_compass">飞羽</string>
    <string name="select_floor">请选择想去的楼层</string>
    <string name="map_not_reach">您还没有去过该地图</string>

    <string name="no_shop_shortcut">您还没有去过商店</string>
    <string name="no_key">没钥匙，打不开</string>
    <string name="cannot_fly">这层不能飞行</string>

</resources>
