<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/comm_translate_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/screen_orientation"
                android:textColor="@android:color/white"
                android:textSize="@dimen/comm_text_size"/>

            <RadioGroup
                android:id="@+id/orientation_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/group_frame"
                android:orientation="horizontal"
                android:padding="5dp">

                <RadioButton
                    android:id="@+id/orientation_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="5dp"
                    android:button="@null"
                    android:text="@string/orientation_auto"
                    android:textColor="@color/radio_text_color"/>

                <RadioButton
                    android:id="@+id/orientation_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:button="@null"
                    android:text="@string/orientation_port"
                    android:textColor="@color/radio_text_color"/>

                <RadioButton
                    android:id="@+id/orientation_land"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:button="@null"
                    android:text="@string/orientation_land"
                    android:textColor="@color/radio_text_color"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cyanflxy.game.widget.SettingCheckBox
                android:id="@+id/background_music"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                app:text="@string/background_music"/>

            <com.cyanflxy.game.widget.SettingCheckBox
                android:id="@+id/game_sound"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                app:text="@string/game_sound"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dev_function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.cyanflxy.game.widget.SettingCheckBox
                    android:id="@+id/shop_shortcut"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:text="@string/shop_shortcut"/>

                <com.cyanflxy.game.widget.SettingCheckBox
                    android:id="@+id/open_all_function"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:text="@string/open_all_function"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.cyanflxy.game.widget.SettingCheckBox
                    android:id="@+id/show_fight_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    app:text="@string/show_fight_dialog"/>

                <View
                    android:id="@+id/map_invisible"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/back"
        style="@style/Button"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/back"/>

</LinearLayout>