<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/content_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <com.cyanflxy.game.widget.HeadView
                android:id="@+id/enemy_head"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/enemy_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/enemy_name"
                android:textColor="@color/enemy_property_text"
                android:textSize="@dimen/record_text_size"/>
        </LinearLayout>

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enemy_name"
            android:textColor="@color/enemy_property_text"
            android:textSize="@dimen/comm_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/hp"
            android:textColor="@color/enemy_property_text"
            android:textSize="@dimen/comm_text_size"/>

        <TextView
            android:id="@+id/hp_lost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp_lost"
            android:textColor="@color/enemy_property_text"
            android:textSize="@dimen/comm_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/damage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/damage"
            android:textColor="@color/enemy_property_text"
            android:textSize="@dimen/comm_text_size"/>

        <TextView
            android:id="@+id/defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defense"
            android:textColor="@color/enemy_property_text"
            android:textSize="@dimen/comm_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/exp"
            android:textColor="@color/enemy_property_text"
            android:textSize="@dimen/comm_text_size"/>

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textColor="@color/enemy_property_text"
            android:textSize="@dimen/comm_text_size"/>

    </LinearLayout>

</LinearLayout>