<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/enemy_list_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/enemy_property_help"
        android:textColor="@color/enemy_property_text"
        android:textSize="22sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/enemy_property_title_divider"/>

    <include layout="@layout/view_enemy_property"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/enemy_property_text"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/enemy_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="1dp"
            android:divider="@color/enemy_property_text">

        </ListView>

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/enemy_empty"
            android:textColor="@color/enemy_property_text"
            android:textSize="24sp"/>

    </FrameLayout>

    <Button
        android:id="@+id/back"
        style="@style/Button"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/back"/>


</LinearLayout>